--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,10 @@
     <title>My Contact</title>
   </head>
   <body>
-    email: paarraammee@gmail.com
-    Tel  : 012345678
-    ที่อยู่ : นนทบุรี
+    <h1>ช่องทางการติดต่อ</h1>
+    <hr>
+    <p>email: paarraammee@gmail.com </p>
+    <p>Tel  : 012345678</p>
+    <p>ที่อยู่ : นนทบุรี</p>
   </body>
 </html>
