--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title> This is Paramee! 🙂 </title>
     </head>
     <body>
+      <div style="text-align:center">
     <img src= "bua.png" alt="Paramee Buasongsee image" width="300" height="300"/>
     <h1>ปารมี บัวสองสี</h1>
     <p>คณะวิศวกรรมศาสตร์และเทคโนโลยี</p>
@@ -12,15 +13,17 @@
     <p><strong><a href="http://www.pim.ac.th"> สถาบันการจัดการปัญญาภิวัฒน์ </a></strong></p>
     <br>
     ดิฉันชื่อ ปารมี บัวสองสี ชื่อเล่น บัว
+    <br><br>
     <hr>
+  </div>
     <h3>ประสบการณ์การฝึกงาน</h3>
     <ul>
       <li>7-ELEVEn staff</li>
 
     </ul>
 
-    <a herf= "contact.html"> ช่องทางการติดต่อ</a>
-
+    <p><a href="contact.html"> ช่องทางการติดต่อ </a></p>
+    <p><a href="report.html"> Weekly Report </a></p>
 
     </body>
 
