--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,27 @@
     <title>My Contact</title>
   </head>
   <body>
-    <h1>ช่องทางการติดต่อ</h1>
+    <ol>
+      <li>จดหมายอิเล็กโทรนิค: paarraammee@gmail.com</li>
+      <li>Tel: 0123456789</li>
+      <li>ที่อยู่: พัทลุง</li>
+    </ol>
+<hr>
+<h3>ติดต่อฉัน</h3>
+<form class="" action="mailto:paarraammee@gmail.com" method="post" enctype="text/plain">
+
+  <lebel>ชื่อ-นามสกุล:</lebel>
+  <input type="text" name="name_surname" value=""><br><br>
+  <lebel>E-mail:</lebel>
+  <input type="text" name="email" value=""><br><br>
+  <lebel>ข้อความที่ต้องการส่ง:</lebel>
+  <textarea name="massage" rows="8" cols="80"></textarea>
+  <input type="submit" name="" >
+</form>
+    <!-- <h1>ช่องทางการติดต่อ</h1>
     <hr>
     <p>email: paarraammee@gmail.com </p>
     <p>Tel  : 012345678</p>
-    <p>ที่อยู่ : นนทบุรี</p>
+    <p>ที่อยู่ : นนทบุรี</p> -->
   </body>
 </html>
