--- a/index.html
+++ b/index.html
@@ -3,25 +3,102 @@
   <head>
     <meta charset = "UTF-8" />
     <title> This is Paramee! 🙂 </title>
+    <style>
+    body {
+      background-color: #FFF4CF;
+    }
+    hr {
+      background-color: none;
+      border-style: dotted none none;
+      height: 0px;
+      width: 40%;
+    }
+    img {
+      height: 300px;
+      width: 300px;
+    }
+
+
+    </style>
     </head>
     <body>
-      <div style="text-align:center">
-    <img src= "bua.png" alt="Paramee Buasongsee image" width="300" height="300"/>
-    <h1>ปารมี บัวสองสี</h1>
-    <p>คณะวิศวกรรมศาสตร์และเทคโนโลยี</p>
-    <p><em>สาขาวิศวกรรมคอมพิวเตอร์และปัญญาประดิษฐ์</em></p>
-    <p><strong><a href="http://www.pim.ac.th"> สถาบันการจัดการปัญญาภิวัฒน์ </a></strong></p>
-    <br>
+
+      <table cellspacing="50">
+        <tr>
+          <td><img src= "bua.png" alt="Paramee Buasongsee image" width="300" height="300"/></td>
+          <td><h1>ปารมี บัวสองสี</h1>
+          <p>คณะวิศวกรรมศาสตร์และเทคโนโลยี</p>
+          <p><em>สาขาวิศวกรรมคอมพิวเตอร์และปัญญาประดิษฐ์</em></p>
+          <p><strong><a href="http://www.pim.ac.th"> สถาบันการจัดการปัญญาภิวัฒน์ </a></strong></p></td>
+        </tr>
+      </table>
+
+    <br><br>
     ดิฉันชื่อ ปารมี บัวสองสี ชื่อเล่น บัว
     <br><br>
     <hr>
-  </div>
-    <h3>ประสบการณ์การฝึกงาน</h3>
-    <ul>
-      <li>7-ELEVEn staff</li>
 
-    </ul>
+    <table border="1px">
 
+<h3>ประสบการณ์การฝึกงาน</h3>
+    <thead>
+      <tr>
+        <th>Year</th>
+        <th>Work Place</th>
+      </tr>
+    </thead>
+    <tr>
+      <td>2021</td>
+      <td>7-ELEVEn Staff</td>
+    </tr>
+  </table>
+  <br>
+<hr>
+<table border="0px">
+  <h3>Skills</h3>
+
+  <thead>
+  <tr>
+    <td>Fast learner with lifelong learning skill</td>
+    <td>🔴🔴🔴🔴🔴</td>
+  </tr>
+  <tr>
+    <td>Skillful in many social media platform</td>
+    <td>🟠🟠🟠🟠</td>
+  </tr>
+  <tr>
+    <td>Able to handle pressure and deadline</td>
+    <td>🟠🟠🟠🟠</td>
+  </tr>
+  <tr>
+    <td>High degree of creativity and passion</td>
+    <td>🟠🟠🟠🟠</td>
+  </tr>
+  <tr>
+    <td>Enjoy working in teamwork environment</td>
+    <td>🟡🟡🟡</td>
+  </tr>
+</thead>
+</table>
+<br>
+<hr>
+<table border="0px">
+
+<h3>Languages</h3>
+<thead>
+
+</thead>
+<tr>
+  <td>Thai(Native)</td>
+  <td>🔴🔴🔴🔴🔴</td>
+</tr>
+<tr>
+  <td>English</td>
+  <td>🟡🟡🟡</td>
+</tr>
+</table>
+<br>
+<hr>
     <p><a href="contact.html"> ช่องทางการติดต่อ </a></p>
     <p><a href="report.html"> Weekly Report </a></p>
 
